tests/language_modules/03_import_resolution/fixtures/invalid/imported_module_syntax_error/Banking/Proofs.vf
module Banking.Proofs

procedure broken

end Banking.Proofs